refactor: consolidate episode list controllers and update data handling

--- a/apps/rick-and-morty/src/app/i18n/locales/en/translation.json
+++ b/apps/rick-and-morty/src/app/i18n/locales/en/translation.json
@@ -29,6 +29,7 @@
     "loadingEpisodeDetails": "Loading episode details...",
     "errorPrefix": "Error:",
     "episodeInfo": "Episode Info: {{code}} - {{name}}",
-    "charactersInfo": "Characters: {{code}} - {{name}}"
+    "charactersInfo": "Characters: {{code}} - {{name}}",
+    "title": "Episode Details"
   }
 }
